# libblake3-cpp

./: CMakeLists.txt
cmake/: blake3-config.cmake.in
